--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,8 @@ h3{
  }
 
 #home-info{
-  background-image: url("images/wireframe3.svg");
+  background-image: url("images/flex-image2.svg");
+  background-position: bottom;
   width: 100%;
   height: 95%;
   padding: 0;
@@ -158,7 +159,7 @@ h3{
   height: 6%;
 }
 
-.blog-posts{
+#blog-posts{
   padding-top: 5%;
   width: 100%;
   height: 90%;
@@ -193,7 +194,6 @@ h3{
 .post-image{
   margin-top: 10%;
   float: left;
-  background-image: url("images/wireframe2.svg");
   width: 100%;
   height: 40%;
 }
@@ -338,7 +338,7 @@ h3{
 
 .reflection-paragraph p{
   line-height: auto;
-  font-size: 15pt;
+  font-size: 14pt;
   text-decoration: none;
   padding-right: 2%;
   font-family: 'Montserrat', sans-serif;
@@ -348,18 +348,15 @@ h3{
 
 .reflection-paragraph a{
   line-height: 0;
-  font-size: 15pt;
+  font-size: 14pt;
   font-family: 'Montserrat', sans-serif;
   color: #ff5000;
   font-weight: 400;
 }
 
+
 /* Latest Posts Page 1 */
 
-#blog-posts2{
-  width: 100%;
-  height: 90%;
-}
 
 .posts2{
   width: 90%;
@@ -378,7 +375,6 @@ h3{
 .post-image2{
   margin-top: 10%;
   float: left;
-  background-image: url("images/wireframe2.svg");
   width: 100%;
   height: 40%;
 }
@@ -438,3 +434,74 @@ h3{
 .post-moreinfo2 a:hover{
   color: #ff5000;
 }
+
+/*Flex Box Page */
+
+.flexbox-image{
+  display: inline-block;
+  width: 50%;
+  height: 15%;
+  float: left;
+}
+
+
+.flexbox-title h1{
+  font-size: 30pt;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  padding-bottom: 1.5%;
+  border-bottom: 1px solid black;
+  line-height: 7vh;
+}
+
+.flexbox-date{
+  margin-top: 6%;
+  padding-top: 1%;
+  float: left;
+  width: 100%;
+  height: 3.5%;
+  border-top: 5px solid black;
+}
+
+.flexbox-date p{
+  line-height: 0%;
+  font-size: 15pt;
+  text-decoration: none;
+  padding-right: 2%;
+  font-family: 'Montserrat', sans-serif;
+  color: #505050;
+  font-weight: 200;
+}
+
+.flexbox-post{
+  width: 90%;
+  height: 125%;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flexbox-paragraph{
+    padding-top: 25%;
+    width: 80%;
+    height: 30%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+.flexbox-paragraph p{
+    line-height: auto;
+    font-size: 15pt;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    font-weight: 400;
+  }
+
+.flexbox-paragraph a{
+    line-height: 0;
+    font-size: 15pt;
+    font-family: 'Montserrat', sans-serif;
+    color: #ff5000;
+    font-weight: 400;
+  }
