--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ h3{
  }
 
 #home-info{
-  background-image: url("images/flex-image2.svg");
+  background-image: url("images/accessibility3.svg");
   background-position: bottom;
   width: 100%;
   height: 95%;
@@ -354,6 +354,10 @@ h3{
   font-weight: 400;
 }
 
+#blog-posts2{
+  width: 100%;
+  height: 90%;
+}
 
 /* Latest Posts Page 1 */
 
@@ -504,4 +508,13 @@ h3{
     font-family: 'Montserrat', sans-serif;
     color: #ff5000;
     font-weight: 400;
+  }
+/* Accessibility Page */
+
+  .accessibility-image{
+    width: 100%;
+    height: 40%;
+    background-image: url("images/accessibility.svg");
+    margin-left: auto;
+    margin-right: auto;
   }
